--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,15 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LogInActivity">
-        </activity>
-        <activity android:name=".SignUpActivity">
-        </activity>
+        <activity android:name=".LogInActivity" ></activity>
+        <activity android:name=".SignUpActivity" ></activity>
+        <activity android:name=".CustomerMainActivity" ></activity>
+        <activity android:name=".LibrarianMainActivity"></activity>
     </application>
 
 </manifest>
