--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".LibrarianMainActivity" />
         <activity android:name=".CustomerBookList" />
         <activity android:name=".BookAdderActivity" />
-        <activity android:name=".BookEditorActivity"></activity>
+        <activity android:name=".BookEditorActivity" />
+        <activity android:name=".LibrarianSearchList"></activity>
     </application>
 
 </manifest>
