Fix Book/Customer. Fix Customer Rent Book. Add multiple function and deal with different exception. Add new return book activity but not implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".BookAdderActivity" />
         <activity android:name=".BookEditorActivity" />
         <activity android:name=".LibrarianSearchList"></activity>
+        <activity android:name=".CustomerReturnBookActivity"></activity>
     </application>
 
 </manifest>
