--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,9 @@
         <activity android:name=".CustomerBookList" />
         <activity android:name=".BookAdderActivity" />
         <activity android:name=".BookEditorActivity" />
-        <activity android:name=".LibrarianSearchList"></activity>
-        <activity android:name=".CustomerReturnBookActivity"></activity>
+        <activity android:name=".LibrarianSearchList" />
+        <activity android:name=".CustomerReturnBookActivity" />
+        <activity android:name=".CustomerReturnConfirmActivity"></activity>
     </application>
 
 </manifest>
