--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.firebase:firebase-database:9.6.1'
     compile 'com.google.firebase:firebase-auth:9.6.1'
+    compile 'com.sun.mail:android-mail:1.5.6'
+    compile 'com.sun.mail:android-activation:1.5.6'
 }
 
 apply plugin: 'com.google.gms.google-services'
