Add new function: Waitlist lookup and delete books from waitlist. Fix some bugs.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".BookEditorActivity" />
         <activity android:name=".LibrarianSearchList" />
         <activity android:name=".CustomerReturnBookActivity" />
-        <activity android:name=".CustomerReturnConfirmActivity"></activity>
+        <activity android:name=".CustomerReturnConfirmActivity" />
+        <activity android:name=".CustomerWaitListActivity"></activity>
     </application>
 
 </manifest>
